@@ -138,7 +138,7 @@ static int stanza_emits       (JobConfig *job, NihConfigStanza *stanza,
 			       const char *file, size_t len,
 			       size_t *pos, size_t *lineno)
 	__attribute__ ((warn_unused_result));
-static int stanza_wait        (JobConfig *job, NihConfigStanza *stanza,
+static int stanza_expect      (JobConfig *job, NihConfigStanza *stanza,
 			       const char *file, size_t len,
 			       size_t *pos, size_t *lineno)
 	__attribute__ ((warn_unused_result));
@@ -211,7 +211,7 @@ static NihConfigStanza stanzas[] = {
 	{ "author",      (NihConfigHandler)stanza_author      },
 	{ "version",     (NihConfigHandler)stanza_version     },
 	{ "emits",       (NihConfigHandler)stanza_emits       },
-	{ "wait",        (NihConfigHandler)stanza_wait        },
+	{ "expect",      (NihConfigHandler)stanza_expect      },
 	{ "respawn",     (NihConfigHandler)stanza_respawn     },
 	{ "service",     (NihConfigHandler)stanza_service     },
 	{ "instance",    (NihConfigHandler)stanza_instance    },
@@ -1462,7 +1462,7 @@ stanza_emits (JobConfig       *job,
 }
 
 /**
- * stanza_wait:
+ * stanza_expect:
  * @job: job being parsed,
  * @stanza: stanza found,
  * @file: file or string to parse,
@@ -1470,19 +1470,19 @@ stanza_emits (JobConfig       *job,
  * @pos: offset within @file,
  * @lineno: line number.
  *
- * Parse a wait stanza from @file.  This stanza expects a single "for"
- * argument, followed by a single argument giving one of the possible
- * JobWaitType enumerations which sets the job's wait_for member.
+ * Parse an expect stanza from @file.  This stanza expects a single argument
+ * single argument giving one of the possible JobExpect enumerations which
+ * sets the job's expect member.
  *
  * Returns: zero on success, negative value on error.
  **/
 static int
-stanza_wait (JobConfig       *job,
-	     NihConfigStanza *stanza,
-	     const char      *file,
-	     size_t           len,
-	     size_t          *pos,
-	     size_t          *lineno)
+stanza_expect (JobConfig       *job,
+	       NihConfigStanza *stanza,
+	       const char      *file,
+	       size_t           len,
+	       size_t          *pos,
+	       size_t          *lineno)
 {
 	size_t  a_pos, a_lineno;
 	int     ret = -1;
@@ -1496,48 +1496,28 @@ stanza_wait (JobConfig       *job,
 	a_pos = *pos;
 	a_lineno = (lineno ? *lineno : 1);
 
-	arg = nih_config_next_token (NULL, file, len, &a_pos, &a_lineno,
-				     NIH_CONFIG_CNLWS, FALSE);
+	arg = nih_config_next_arg (NULL, file, len, &a_pos, &a_lineno);
 	if (! arg)
 		goto finish;
 
-	if (! strcmp (arg, "for")) {
-		nih_free (arg);
-
-		*pos = a_pos;
-		if (lineno)
-			*lineno = a_lineno;
-
-		arg = nih_config_next_token (NULL, file, len,
-					     &a_pos, &a_lineno,
-					     NIH_CONFIG_CNLWS, FALSE);
-		if (! arg)
-			goto finish;
-
-		if (! strcmp (arg, "stop")) {
-			job->wait_for = JOB_WAIT_STOP;
-		} else if (! strcmp (arg, "daemon")) {
-			job->wait_for = JOB_WAIT_DAEMON;
-		} else if (! strcmp (arg, "fork")) {
-			job->wait_for = JOB_WAIT_FORK;
-		} else if (! strcmp (arg, "none")) {
-			job->wait_for = JOB_WAIT_NONE;
-		} else {
-			nih_free (arg);
-
-			nih_return_error (-1, NIH_CONFIG_UNKNOWN_STANZA,
-					  _(NIH_CONFIG_UNKNOWN_STANZA_STR));
-		}
-
-		nih_free (arg);
-
-		ret = nih_config_skip_comment (file, len, &a_pos, &a_lineno);
+	if (! strcmp (arg, "stop")) {
+		job->expect = JOB_EXPECT_STOP;
+	} else if (! strcmp (arg, "daemon")) {
+		job->expect = JOB_EXPECT_DAEMON;
+	} else if (! strcmp (arg, "fork")) {
+		job->expect = JOB_EXPECT_FORK;
+	} else if (! strcmp (arg, "none")) {
+		job->expect = JOB_EXPECT_NONE;
 	} else {
 		nih_free (arg);
 
 		nih_return_error (-1, NIH_CONFIG_UNKNOWN_STANZA,
 				  _(NIH_CONFIG_UNKNOWN_STANZA_STR));
 	}
+
+	nih_free (arg);
+
+	ret = nih_config_skip_comment (file, len, &a_pos, &a_lineno);
 
 finish:
 	*pos = a_pos;
